Refactor Helper into VarInt and VarStr class

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "build": "tsc",
-        "test": "ts-mocha test/**/*.test.ts"
+        "test": "ts-mocha 'test/**/*.test.ts'"
     },
     "keywords": [
         "bip322",
