--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "build": "tsc",
-        "test": "ts-mocha 'test/**/*.test.ts'"
+        "test": "ts-mocha 'test/**/*.test.ts'",
+        "postinstall": "patch-package"
     },
     "keywords": [
         "bip322",
@@ -30,6 +31,7 @@
     "dependencies": {
         "@bitcoinerlab/secp256k1": "^1.0.2",
         "bitcoinjs-lib": "^6.1.1",
-        "fast-sha256": "^1.3.0"
+        "fast-sha256": "^1.3.0",
+        "patch-package": "^7.0.0"
     }
 }
