--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "main": "index.js",
     "scripts": {
         "build": "tsc",
-        "test": "ts-mocha 'test/**/*.test.ts'",
-        "postinstall": "patch-package"
+        "test": "ts-mocha 'test/**/*.test.ts'"
     },
     "keywords": [
         "bip322",
@@ -31,7 +30,6 @@
     "dependencies": {
         "@bitcoinerlab/secp256k1": "^1.0.2",
         "bitcoinjs-lib": "^6.1.1",
-        "fast-sha256": "^1.3.0",
-        "patch-package": "^7.0.0"
+        "fast-sha256": "^1.3.0"
     }
 }
