--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "build": "tsc",
-        "test": "ts-mocha 'test/**/*.test.ts'"
+        "test": "ts-mocha 'test/**/*.test.ts'",
+        "test:coverage": "nyc --reporter=html --reporter=text --reporter=text-summary npm test"
     },
     "keywords": [
         "bip322",
@@ -24,12 +25,14 @@
         "chai-bytes": "^0.1.2",
         "ecpair": "^2.1.0",
         "mocha": "^10.2.0",
+        "nyc": "^15.1.0",
         "ts-mocha": "^10.0.0",
         "typescript": "^5.1.3"
     },
     "dependencies": {
         "@bitcoinerlab/secp256k1": "^1.0.2",
         "bitcoinjs-lib": "^6.1.1",
+        "bitcoinjs-message": "^2.2.0",
         "fast-sha256": "^1.3.0"
     }
 }
