--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "tsc",
         "prepack": "npm run build",
         "test": "ts-mocha 'test/**/*.test.ts'",
-        "test:coverage": "nyc --reporter=html --reporter=text --reporter=text-summary npm test"
+        "test:coverage": "nyc --reporter=html --reporter=text --reporter=text-summary --reporter=text-lcov npm test"
     },
     "keywords": [
         "bip322",
