--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "name": "bip322",
     "version": "1.0.0",
-    "description": "A library that provides utility functions related to BIP-322 signature scheme",
+    "description": "A Javascript library that provides utility functions related to the BIP-322 signature scheme",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
         "build": "tsc",
+        "doc": "typedoc src/index.ts",
         "prepack": "npm run build",
         "test": "ts-mocha 'test/**/*.test.ts'",
         "test:coverage": "nyc --reporter=text --reporter=text-summary --reporter=lcov npm test"
@@ -28,6 +29,7 @@
         "mocha": "^10.2.0",
         "nyc": "^15.1.0",
         "ts-mocha": "^10.0.0",
+        "typedoc": "^0.24.8",
         "typescript": "^5.1.3"
     },
     "dependencies": {
