--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/chai": "^4.3.5",
         "@types/mocha": "^10.0.1",
         "@types/node": "^20.2.5",
+        "@types/secp256k1": "^4.0.3",
         "chai": "^4.3.7",
         "chai-bytes": "^0.1.2",
         "mocha": "^10.2.0",
@@ -38,6 +39,7 @@
         "bitcoinjs-lib": "^6.1.1",
         "bitcoinjs-message": "^2.2.0",
         "ecpair": "^2.1.0",
-        "fast-sha256": "^1.3.0"
+        "fast-sha256": "^1.3.0",
+        "secp256k1": "^5.0.0"
     }
 }
