--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build documentation
-        run: npm run docs
+        run: npm run doc
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
