--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "bitcoinjs-lib": "^6.1.1",
         "bitcoinjs-message": "^2.2.0",
         "ecpair": "^2.1.0",
+        "express": "^4.18.2",
         "fast-sha256": "^1.3.0",
         "secp256k1": "^5.0.0"
     }
