Install prepare script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "build": "tsc",
         "doc": "typedoc src/index.ts",
         "prepack": "npm run build",
+        "prepare": "npm run build",
         "test": "ts-mocha 'test/**/*.test.ts'",
         "test:coverage": "nyc --reporter=text --reporter=text-summary --reporter=lcov npm test"
     },
