--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "license": "MIT",
     "devDependencies": {
         "@types/chai": "^4.3.5",
+        "@types/elliptic": "^6.4.18",
         "@types/mocha": "^10.0.1",
         "@types/node": "^20.2.5",
         "@types/secp256k1": "^4.0.3",
@@ -39,6 +40,7 @@
         "bitcoinjs-lib": "^6.1.1",
         "bitcoinjs-message": "^2.2.0",
         "ecpair": "^2.1.0",
+        "elliptic": "^6.5.5",
         "fast-sha256": "^1.3.0",
         "secp256k1": "^5.0.0"
     }
