--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@types/mocha": "^10.0.6",
         "@types/node": "^20.12.12",
         "@types/secp256k1": "^4.0.6",
+        "bitcoinjs-message": "^2.2.0",
         "chai": "^4.3.7",
         "chai-bytes": "^0.1.2",
         "mocha": "^10.4.0",
@@ -40,11 +41,9 @@
     },
     "dependencies": {
         "@bitcoinerlab/secp256k1": "^1.2.0",
+        "@noble/curves": "^2.0.1",
         "bitcoinjs-lib": "^6.1.7",
-        "bitcoinjs-message": "^2.2.0",
         "ecpair": "^2.1.0",
-        "elliptic": "^6.6.1",
-        "fast-sha256": "^1.3.0",
-        "secp256k1": "^5.0.1"
+        "fast-sha256": "^1.3.0"
     }
 }
